# load-balancing

./: pyproject.toml
src/server/: __init__.py
src/test/: __init__.py
src/worker/: __init__.py  file.txt  stem_hello.py  stemmedText.txt
